--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="slide">
                 <img src="dune (3).png" alt="">
-                <H1 class="texto3">Duna: Parte Dois estará disponível em várias plataformas de streaming após seu lançamento nos cinemas. <a href="https://www.max.com/br/pt/movies/duna-parte-dois/f0a4f239-0b57-47e2-a39a-54fb96925e61?utm_source=universal_search" target="_blank">HBO Max</a>, <a href="https://www.primevideo.com/dp/amzn1.dv.gti.9392c069-96f9-421b-ac7a-275308e1327a?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">Amazon Prime Video</a> ou <a href="https://tv.apple.com/br/movie/dune-part-two/umc.cmc.363aycnv6vy9qgekvew6fveb9" target="_blank">Apple TV+</a> para aluguel ou compra digital.</H1>
+                <H1 class="texto3">Duna: Parte Dois esta disponível em várias plataformas de streaming após seu lançamento nos cinemas. <a href="https://www.max.com/br/pt/movies/duna-parte-dois/f0a4f239-0b57-47e2-a39a-54fb96925e61?utm_source=universal_search" target="_blank">HBO Max</a>, <a href="https://www.primevideo.com/dp/amzn1.dv.gti.9392c069-96f9-421b-ac7a-275308e1327a?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">Amazon Prime Video</a> ou <a href="https://tv.apple.com/br/movie/dune-part-two/umc.cmc.363aycnv6vy9qgekvew6fveb9" target="_blank">Apple TV+</a> para aluguel ou compra digital.</H1>
             </div>
             
             <div class="navigation-auto">
